Add more field in calculator page and write functional test

--- a/calculator/templates/calculator_GET.html
+++ b/calculator/templates/calculator_GET.html
@@ -1,5 +1,24 @@
 <html>
-<form action="Number1" method="GET">
-<input type="text">
+<title>
+calculatorGET
+</title>
+<form method="GET">
+<label for="x">x :</label>
+<input type="text" id="x" name="x">
+
+
+<label for="operation">Operation:</label>
+  <select id="operation" name="operation">
+    <option value="+">+</option>
+    <option value="-">-</option>
+    <option value="*">*</option>
+    <option value="/">/</option>
+  </select>
+</br>
+
+<label for="y">y :</label>
+<input type="text" id="y" name="y"></br>
+
+<input type="submit" value="calculate">
 </form>
 </html>
